<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBaseWhite"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:paddingTop="30dp"
        android:stretchColumns="0,1,2,3">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/wx_circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/ic_share_wx_circle"
                android:gravity="center"
                android:text="@string/share_wx_circle"
                android:textColor="@color/tc_normal" />

            <TextView
                android:id="@+id/wx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/ic_share_wx"
                android:gravity="center"
                android:text="@string/share_wx"
                android:textColor="@color/tc_normal" />

            <TextView
                android:id="@+id/qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/ic_share_qq"
                android:gravity="center"
                android:text="@string/share_qq"
                android:textColor="@color/tc_normal" />

            <TextView
                android:id="@+id/qzone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/ic_share_qzone"
                android:gravity="center"
                android:text="@string/share_qzone"
                android:textColor="@color/tc_normal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/weibo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/ic_share_weibo"
                android:gravity="center"
                android:text="@string/share_weibo"
                android:textColor="@color/tc_normal" />

            <TextView
                android:id="@+id/copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/ic_share_copy"
                android:gravity="center"
                android:text="@string/share_copy"
                android:textColor="@color/tc_normal" />


        </TableRow>
    </TableLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="48dp"
        android:padding="10dp"
        android:text="@string/cancel"
        android:textColor="@color/tc_normal"
        android:textSize="18sp" />
</LinearLayout>